refactor(Employe): migration vers la classe Employe
Remplace les tableaux Object[] par une classe Employe dédiée.
Adapte GestionPersonnel et les tests unitaires.